# scallop

./: .gitconfig  .gitignore  LICENSE  Makefile.am  README  README.md  TODO  build.sh  configure.ac  configure.ac.mac  configure.bioconda.ac  configure.linux.ac  configure.mac.ac  release.sh
bin1/: analyze.exp.sim.sh  classify.pl  create.pdf.sh  fix.gtf.sh  flux.exp.params  flux.seq.params  make.exp.sim.all.sh  make.exp.sim.sh  map.salmon.exp.pl  run.exp.salmon.sh  run.exp.sim.all.sh  run.exp.sim.sh  run.map.salmon.exp.sh  run.rand.sim.sh  summary.exp.sim.sh  summary.random.sh
bin2/: analyze.summary.pl  classify.reference.sh  collect.gtf.sh  evaluate.09.sh  make.seq.sim.sh  merge.gtf.tlist.pl  run.case.sh  run.scallop.sh  select.transcripts.pl  split.bed.pl  summary.cuffcompare.sh  summary.roc.sh
bin2/EP/case/: NOTE
doc/manual/: scallop.tex
doc/note.2016.01.17/: algo.tex  colors.tex  main.tex
doc/note.2016.01.17/figures/: basis.tex  colors.tex  graph.tex
doc/note.2016.03/: algo.tex  main.tex  matrix.tex
doc/note.2016.03/figs/: graph1.tex  graph3.tex  graph4.tex
doc/note.2016.04.04/: algo.tex  colors.tex  main.tex
doc/note.2016.04.04/figs/: easy.tex  graph2.tex  hard.tex  merge.tex  nested.tex  trivial.tex
doc/seminar.2016.01.28/: algo.tex  beamerthemeLANE.sty  intro.tex  main.tex
doc/seminar.2016.01.28/figures/: bipartite.tex  graph1.tex  graph3.tex  greedy1.tex  greedy2.tex  greedy3.tex  greedy4.tex  index.tex  merge.tex  residual.tex  resolve.tex
docs/manual/: scallop.tex
gtfcompare/: configure.ac
gtfcompare/src/: Makefile.am  gene.cc  gene.h  genome.cc  genome.h  main.cc  transcript.cc  transcript.h
lib/: Makefile.am  build.sh
lib/graph/: Makefile.am  configure.ac  directed_graph.cc  edge_base.cc  graph_base.cc  undirected_graph.cc
lib/graph/src/: Makefile.am  directed_graph.cc  directed_graph.h  draw.cc  draw.h  edge_base.h  graph_base.cc  graph_base.h  undirected_graph.cc  undirected_graph.h  vertex_base.cc  vertex_base.h
lib/gtf/: Makefile.am  configure.ac  gene.cc  item.h  transcript.cc  transcript.h
lib/gtf/src/: Makefile.am  exon.cc  exon.h  gene.cc  gene.h  genome.cc  genome.h  genome1.cc  genome1.h  item.cc  item.h  transcript.cc  transcript.h
lib/util/: Makefile.am  configure.ac  util.cc  util.h
lib/util/src/: util.cc  util.h
src/: Makefile.am  Makefile.in  assembler.cc  assembler.h  bundle.cc  bundle.h  bundle_base.cc  bundle_base.h  ccsread_info.cc  ccsread_info.h  cluster.cc  cluster.h  config.cc  config.h  config.h.in  configure  configure.ac  edge_info.cc  edge_info.h  equation.h  filter.cc  filter.h  gtf.cc  hit.cc  hit.h  hyper_set.cc  hyper_set.h  interval_map.cc  interval_map.h  junction.cc  junction.h  main.cc  param_advising.h  partial_exon.cc  previewer.cc  previewer.h  quantifier.cc  quantifier.h  region.cc  region.h  (+14 more)
src/lib/: Makefile.in
src/lib/graph/: Makefile.in  edge_base.h  graph_base.cc  graph_base.h
src/lib/gtf/: Makefile.am  Makefile.in
src/lib/util/: Makefile.am  Makefile.in
src/src/: .gitignore  Makefile.am  Makefile.in  a.cc  algebra.cc  algebra.h  assember.cc  assember.h  assembler.cc  assembler.h  bbase.cc  bbase.h  binomial.cc  binomial.h  boost_graph.cc  boost_graph.h  boundary.cc  boundary.h  bridge.cc  bridge.h  bundle.cc  bundle.h  bundle_base.cc  bundle_base.h  bundle_extend.cc  bundle_extend.h  clp.cc  clp.h  common.cc  common.h  config.cc  config.h  decomposer.cc  decomposer.h  dgraph.cc  dgraph.h  directed_graph.cc  directed_graph.h  disjoint_sets.cc  disjoint_sets.h  (+119 more)
tools/: build.sh
tools/cuffroc/: configure.ac
tools/cuffroc/src/: Makefile.am  cuffitem.cc  cuffitem.h  cuffroc.cc  cuffroc.h  item.cc  item.h  main.cc
tools/gtfcompare/src/: .gitignore  Makefile.am  compare.cc  compare.h  main.cc
tools/gtfcuff/: configure.ac
tools/gtfcuff/src/: Makefile.am  cuffitem.h  gtfcuff.cc  gtfcuff.h  main.cc  quantitem.cc  quantitem.h
tools/gtfformat/: configure.ac
tools/gtfformat/src/: Makefile.am  main.cc
tools/gtfmerge/: configure.ac
tools/gtfmerge/src/: .gitignore  Makefile.am  compare.h  config.cc  config.h  genome1.cc  genome1.h  gtfmerge.cc  gtfmerge.h  main.cc
tools/gtfquant/src/: Makefile.am  gtfquant.cc  gtfquant.h  main.cc  quantitem.cc  quantitem.h
tools/gtfsimulator/: configure.ac
tools/gtfsimulator/src/: Makefile.am  main.cc  simulator.cc  simulator.h
tools/hayer/: configure.ac
tools/hayer/src/: Makefile.am  hayer.cc  hayer.h  main.cc
